apps/adguard/adguard.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-home
  namespace: adguard
spec:
  serviceName: "adguard"
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:v0.107.69@sha256:8a4107ec812023842ccab9e04600c5d39d3be6b15e907c34a36339c184c8fccf
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 3000
          name: http-initial
        - containerPort: 80
          name: http
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work/
        - name: adguard-config
          mountPath: /opt/adguardhome/conf/
  volumeClaimTemplates:
  - metadata:
      name: adguard-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
      storageClassName: "longhorn"
  - metadata:
      name: adguard-config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: "longhorn"
