apps/adguard/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 3000
    targetPort: 3000
    name: http-initial
